<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.udclient.ui.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_tables"
            app:destination="@id/nav_tables" />
    </fragment>

    <fragment
        android:id="@+id/nav_tables"
        android:name="com.example.udclient.ui.fragments.TablesFragment"
        android:label="@string/menu_tables"
        tools:layout="@layout/fragment_tables" >
        <action
            android:id="@+id/action_nav_tables_to_nav_summary"
            app:destination="@id/nav_summary" />
    </fragment>

    <fragment
        android:id="@+id/nav_summary"
        android:name="com.example.udclient.ui.fragments.SummaryFragment"
        android:label="@string/menu_summary"
        tools:layout="@layout/fragment_summary" />
</navigation>